--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,14 @@ subprojects {
 
     sourceCompatibility = 19
     targetCompatibility = 19
+
+    tasks.withType(JavaCompile) {
+        options.compilerArgs += '--enable-preview'
+    }
+    tasks.withType(Test) {
+        jvmArgs += "--enable-preview"
+    }
+
     repositories {
         mavenCentral()
         mavenLocal()
