upload all test results

--- a/.github/workflows/jpos.yml
+++ b/.github/workflows/jpos.yml
@@ -35,7 +35,7 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: test-results
-        path: jpos/build/reports/tests/test/index.html
+        path: jpos/build/reports/tests/*
     - name: Dependency Check Analyze
       run: ./gradlew jpos:dependencyCheckAnalyze --info
       env:
