--- a/.github/workflows/jpos.yml
+++ b/.github/workflows/jpos.yml
@@ -16,6 +16,7 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: ${{ matrix.java }}
+        java-options: "-XX:+EnablePreview"
     - name: Cache Gradle packages
       uses: actions/cache@v2
       with:
