--- a/build.gradle
+++ b/build.gradle
@@ -27,8 +27,8 @@ subprojects {
     javadoc.failOnError = false
     pmd.ignoreFailures = true
 
-    sourceCompatibility = 19
-    targetCompatibility = 19
+    sourceCompatibility = 20
+    targetCompatibility = 20
 
     tasks.withType(JavaCompile) {
         options.compilerArgs += '--enable-preview'
@@ -44,7 +44,7 @@ subprojects {
     if (project.hasProperty("lint")) {
       // gradle -Plint ...
       tasks.withType(JavaCompile) {
-        options.compilerArgs << "-Xlint" 
+        options.compilerArgs << "-Xlint:preview" 
       } 
     }
     java {
@@ -161,7 +161,7 @@ idea {
                 }.mapping.@vcs = 'Git' 
             }
         }
-        languageLevel = '19'
+        languageLevel = '20'
     }
 }
 
