--- a/.github/workflows/jpos.yml
+++ b/.github/workflows/jpos.yml
@@ -7,22 +7,24 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        java: [ 19 ]
+        java: [ 20 ]
         os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Set up JDK ${{ matrix.java }}
-      uses: actions/setup-java@v1
+      uses: actions/setup-java@v3
       with:
+        distribution: 'corretto'
         java-version: ${{ matrix.java }}
         java-options: "-XX:+EnablePreview"
-    - name: Cache Gradle packages
-      uses: actions/cache@v2
-      with:
-        path: ~/.gradle/caches
-        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
-        restore-keys: ${{ runner.os }}-gradle
+        cache: 'gradle'
+#    - name: Cache Gradle packages
+#      uses: actions/cache@v2
+#      with:
+#        path: ~/.gradle/caches
+#        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
+#        restore-keys: ${{ runner.os }}-gradle
     - name: Assemble
       run: ./gradlew jpos:assemble --info
       env:
