--- a/build.gradle
+++ b/build.gradle
@@ -24,8 +24,10 @@ subprojects {
     configurations.implementation.transitive = true
     javadoc.failOnError = false
 
-    sourceCompatibility = 20
-    targetCompatibility = 20
+    java {
+       sourceCompatibility = JavaVersion.VERSION_20
+       targetCompatibility = JavaVersion.VERSION_20
+    }
 
     tasks.withType(JavaCompile) {
         options.compilerArgs += '--enable-preview'
