--- a/jpos/build.gradle
+++ b/jpos/build.gradle
@@ -1,20 +1,8 @@
-buildscript {
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath 'biz.aQute.bnd:biz.aQute.bnd.gradle:5.3.0'
-        classpath 'org.owasp:dependency-check-gradle:7.2.1'
-    }
-}
 plugins {
    id "org.gradlex.extra-java-module-info" version "1.1"
+   id "org.owasp.dependencycheck" version "8.3.1"
    // id 'checkstyle'
 }
-apply plugin: 'biz.aQute.bnd.builder'
-apply plugin: 'org.owasp.dependencycheck'
-
-import aQute.bnd.gradle.Bundle
 
 extraJavaModuleInfo {
     automaticModule ('jdom2-2.0.6.jar', 'org.jdom2')
@@ -117,8 +105,7 @@ def jposCopySpec = copySpec {
         include 'cfg/authorized_keys'
         fileMode 0400
     }
-    from(file("${project.buildDir}/${project.libsDirName}/${q2ArchiveJarName}"))
-
+    from(file("${project.buildDir}/libs/${q2ArchiveJarName}"))
     into("lib") {
         from(configurations.runtimeClasspath)
     }
@@ -142,27 +129,18 @@ task listJars {
     }
 }
 
-jar () {
+jar {
     manifest {
         attributes 'Implementation-Title': 'jPOS', 
                    'Implementation-Version': project.version
     }
-    bnd (
-        'Bundle-Vendor': bundleVendor,
-        'Bundle-License': bundleLicense,
-        'Bundle-DocURL': bundleDocURL,
-        'Bundle-Description': bundleDescription,
-        'Bundle-Activator': bundleActivator,
-        'Import-Package': bundleImportPackage,
-        'Export-Package': bundleExportPackage
-    )
 }
 
 java {
    withSourcesJar()
 }
 
-task q2jar (type: Bundle) {
+task q2jar (type: Jar) {
     dependsOn jar
     archiveClassifier.set('q2')
     from sourceSets.main.output.classesDirs, sourceSets.main.output.resourcesDir
@@ -173,16 +151,6 @@ task q2jar (type: Bundle) {
                    'Main-Class': 'org.jpos.q2.Q2',
                    'Class-Path': manifestClasspath
     }
-    bnd (
-        'Bundle-Vendor': bundleVendor,
-        'Bundle-License': bundleLicense,
-        'Bundle-DocURL': bundleDocURL,
-        'Bundle-Description': bundleDescription,
-        'Bundle-Activator': bundleActivator,
-        'Import-Package': bundleImportPackage,
-        'Export-Package': bundleExportPackage,
-        'Include-Resource': configurations.runtimeClasspath.collect { '-lib/' + it.getName() }.join(' ')
-    )
 }
 
 //checkstyle {
@@ -190,45 +158,17 @@ task q2jar (type: Bundle) {
 //    configFile file("${rootProject.projectDir}/.github/linters/sun_checks.xml")
 //}
 
-task bundleFull (type: Bundle) {
-    dependsOn jar
-    archiveClassifier.set('bundle-full')
-    from sourceSets.main.output.classesDirs, sourceSets.main.output.resourcesDir
-    manifest {
-        def manifestClasspath = configurations.runtimeClasspath.collect { "lib/" + it.getName() }.join(' ') 
-        attributes 'Implementation-Title': 'jPOS', 
-                   'Implementation-Version': project.version,
-                   'Main-Class': 'org.jpos.q2.Q2',
-                   'Class-Path': manifestClasspath
-    }
-    bnd (
-            'Bundle-Vendor': bundleVendor,
-            'Bundle-License': bundleLicense,
-            'Bundle-DocURL': bundleDocURL,
-            'Bundle-Description': bundleDescription,
-            'Bundle-Activator': bundleActivator,
-            'Import-Package': bundleImportPackage,
-            'Export-Package': bundleExportPackage,
-            'Include-Resource': configurations.runtimeClasspath.collect { '-lib/' + it.getName() }.join(' ')
-    )
-    into ('lib') {
-        from configurations.runtimeClasspath {
-            exclude 'org.osgi.core*.jar'
-        }
-    }
-}
-
 task sourceJar( type: Jar ) {
     archiveClassifier.set("sources")
     from sourceSets.main.allSource
 }
 
 artifacts {
-    archives sourceJar, javadocJar, bundleFull
+    archives sourceJar, javadocJar
 }
 
 task dist (type: Tar) { 
-    dependsOn 'q2jar', 'assemble', 'sourceJar'
+    dependsOn 'jar', 'assemble', 'sourceJar'
     compression = Compression.GZIP
     includeEmptyDirs true
     with jposCopySpec
@@ -337,6 +277,7 @@ task viewTests (description: 'Open Test Reports') {
         )
     }
 }
+
 
 test {
   minHeapSize = "4G" 
