removed unused variables

--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,7 @@ subprojects {
         options.compilerArgs += '--enable-preview'
     }
     tasks.withType(Test) {
-        jvmArgs += "--enable-preview"
+        jvmArgs += '--enable-preview'
     }
 
     repositories {
