--- a/.github/workflows/jpos.yml
+++ b/.github/workflows/jpos.yml
@@ -6,7 +6,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        java: [ 1.8, 9, 10, 11, 12, 13, 14, 15 ]
+        java: [ 1.8, 9, 11 ]
         os: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.os }}
     steps:
