prometheus is a well known QBean

--- a/jpos/src/main/resources/org/jpos/q2/QFactory.properties
+++ b/jpos/src/main/resources/org/jpos/q2/QFactory.properties
@@ -17,3 +17,4 @@ sshd=org.jpos.q2.ssh.SshService
 ssm=org.jpos.q2.security.SMAdaptor
 ks=org.jpos.q2.security.KeyStoreAdaptor
 templates=org.jpos.q2.qbean.TemplateDeployer
+prometheus=org.jpos.metrics.PrometheusService
