--- a/.github/workflows/jpos.yml
+++ b/.github/workflows/jpos.yml
@@ -6,13 +6,13 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        java: [ 1.8, 9, 11 ]
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        java: [ 1.8, 11 ]
+        os: [ubuntu-latest, windows-latest]
     runs-on: ${{ matrix.os }}
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
     - name: Set up JDK ${{ matrix.java }}
-      uses: actions/setup-java@v1
+      uses: actions/setup-java@v3
       with:
         java-version: ${{ matrix.java }}
     - name: Cache Gradle packages
