Force latest SLF4J API

--- a/jpos/build.gradle
+++ b/jpos/build.gradle
@@ -54,7 +54,7 @@ dependencies {
     api libs.bcprov
     api libs.bcpg
     api libs.commonscli
-    // api libs.slf4japi
+    api libs.slf4japi
     api libs.micrometercore
     api libs.micrometerprometheus
     
