Updated Mockito in order to support Java 22

--- a/jpos/build.gradle
+++ b/jpos/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     api libs.jacksonCore
     api libs.jacksonDataBind
     api libs.jacksonDataTypeJSR310
+    api libs.jacksonDataFormatXML
     
     implementation libs.yaml;
     implementation libs.jdbm
