--- a/build.gradle
+++ b/build.gradle
@@ -29,11 +29,12 @@ subprojects {
     }
 
     tasks.withType(JavaCompile) {
-        options.compilerArgs += '--enable-preview'
+        // options.compilerArgs += '--enable-preview'
+        options.release = JavaVersion.VERSION_23.ordinal()
     }
-    tasks.withType(Test) {
-        jvmArgs += '--enable-preview'
-    }
+    //tasks.withType(Test) {
+    //    jvmArgs += '--enable-preview'
+    //}
 
     repositories {
         mavenCentral()
