fix Gradle 8.12 deprecations before moving to Gradle 9

--- a/build.gradle
+++ b/build.gradle
@@ -114,7 +114,7 @@ subprojects {
     }
 
     signing {
-        required { !isSnapshot }
+        required = { !isSnapshot }
         sign publishing.publications.mavenJava
     }
 
