--- a/jpos/src/main/resources/org/jpos/iso/ISOCurrency.properties
+++ b/jpos/src/main/resources/org/jpos/iso/ISOCurrency.properties
@@ -1,4 +1,4 @@
 BYN=933 2 // Belarusian Ruble BELARUS added in July 1st not available in Java8
 VES=928 2 // VENEZUELA (BOLIVARIAN REPUBLIC OF) ISO 4217 AMENDMENT NUMBER 166
 SLE=925 2 // Effective 1 April 2022 the ISO 4217 code for the Sierra Leone redenominated monetary unit will be SLE. 
-
+ZWG=924 2 // ZIMBABWE (Zimbabwe Gold) ISO 4217 AMENDMENT NUMBER 177 added on June 20th, 2024
