--- a/.github/workflows/jpos.yml
+++ b/.github/workflows/jpos.yml
@@ -7,7 +7,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        java: [ 23 ]
+        java: [ 24 ]
         os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
@@ -38,8 +38,8 @@ jobs:
       with:
         name: test-results
         path: jpos/build/reports/tests/*
-    - name: Dependency Check Analyze
-      run: ./gradlew jpos:dependencyCheckAnalyze --info
-      env:
-        TERM: dumb
+#    - name: Dependency Check Analyze
+#      run: ./gradlew jpos:dependencyCheckAnalyze --info
+#      env:
+#        TERM: dumb
 
